--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,5 +31,13 @@ bind l next-window
 bind j select-pane -t :.+
 bind k select-pane -t :.-
 
+bind-key C-j resize-pane -D
+bind-key C-k resize-pane -U
+bind-key C-h resize-pane -L
+bind-key C-l resize-pane -R
+
+bind-key H select-layout even-horizontal
+bind-key V select-layout even-vertical
+
 # }}}
 # vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
