Add key-bind to read .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,5 +39,7 @@ bind-key C-l resize-pane -R
 bind-key H select-layout even-horizontal
 bind-key V select-layout even-vertical
 
+bind-key R source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
+
 # }}}
 # vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
