--- a/.screenrc
+++ b/.screenrc
@@ -1,6 +1,5 @@
 # .screenrc
-# Maintainer:   janus_wel <janus.wel.3@gmail.com>
-# Last Change:  2009/11/11 04:40:41.
+# janus_wel <janus.wel.3@gmail.com>
 
 # general {{{1
 # for safety
