--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # .tmux.conf
-# Maintainer:   janus_wel <janus.wel.3@gmail.com>
+# janus_wel <janus.wel.3@gmail.com>
 
 # general options {{{1
 # The left is just a padding
