add settings to share clip board and tmux yank

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,5 +41,11 @@ bind-key V select-layout even-vertical
 
 bind-key R source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
 
+# needs "brew install reattach-to-user-namespace"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattch-to-user-namespace pbcopy"
+
 # }}}
 # vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
