apply terminal-color settings in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set-option -g status-fg blue
 # for vimmer
 set-option -g status-keys vi
 
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+
 # window options {{{1
 # for vimmer
 set-window-option -g mode-keys vi
