:bug: fix can't yank in Terminal.app

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,8 @@ set-option -g status-keys vi
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # window options {{{1
 # for vimmer
 set-window-option -g mode-keys vi
@@ -33,6 +35,8 @@ bind l next-window
 
 bind j select-pane -t :.+
 bind k select-pane -t :.-
+
+bind-key c new-window -n 'work'
 
 bind-key C-j resize-pane -D
 bind-key C-k resize-pane -U
