--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # .tmux.conf
 # janus_wel <janus.wel.3@gmail.com>
 
+# needs "brew install reattach-to-user-namespace"
+
 # general options {{{1
 # The left is just a padding
 set-option -g status-left " "
@@ -48,11 +50,11 @@ bind-key V select-layout even-vertical
 
 bind-key R source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
 
-# needs "brew install reattach-to-user-namespace"
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattch-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi q send -X cancel
 
 # }}}
 # vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
