:wrench: add some settings for git-lfs

--- a/.gitconfig
+++ b/.gitconfig
@@ -46,3 +46,8 @@
 	ff = false
 [diff]
     renames = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
