:wrench: add settings to ignore authToken in .npmrc

--- a/.gitconfig
+++ b/.gitconfig
@@ -53,3 +53,6 @@
 	required = true
 [pager]
     branch = false
+[filter "ignore-npmrc"]
+    smudge = cat
+    clean = sed '/^\\/\\/registry\\.npmjs\\.org\\/:_authToken/d'
