:wrench: add settings to renumbering windows number

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ set -g terminal-overrides 'xterm:colors=256'
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set-option -g renumber-windows on
+
 # window options {{{1
 # for vimmer
 set-window-option -g mode-keys vi
