:wrench: follow version 2.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,9 +26,7 @@ set-option -g renumber-windows on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 # elder-friendly
-set-window-option -g window-status-current-attr bold,underscore
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-style fg=red,bg=black,bold,underscore
 
 # keybinds {{{1
 # disable last-window
