--- a/base/tsconfig.json
+++ b/base/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "charset": "utf8",
     "newLine": "LF",
-    "outDir": "dist",
-    "target": "es2018",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "CommonJS",
+    "lib": ["ESNext"],
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "outDir": "dist",
     "declaration": true,
     "removeComments": true,
-    "resolveJsonModule": true,
     "strict": true,
     "noErrorTruncation": true,
     "noFallthroughCasesInSwitch": true,
