--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,6 @@
 # .tmux.conf
 # janus_wel <janus.wel.3@gmail.com>
 
-# needs "brew install reattach-to-user-namespace"
-
 # general options {{{1
 # The left is just a padding
 set-option -g status-left " "
@@ -16,8 +14,6 @@ set-option -g status-keys vi
 
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
-
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set-option -g renumber-windows on
 
@@ -51,9 +47,8 @@ bind-key V select-layout even-vertical
 bind-key R source-file ~/.tmux.conf \; display-message "sourced .tmux.conf"
 
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi q send -X cancel
 
 # }}}
